<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/dashboard_page"
        android:icon="@drawable/icon_dashboard"
        android:title="@string/drawer_mainpage_title"/>
    <item android:id="@+id/patientView_page"
        android:icon="@drawable/icon_yoga"
        android:title="@string/drawer_patientview_title"/>
    <item android:id="@+id/history_page"
        android:icon="@drawable/icon_history"
        android:title="@string/drawer_history_title"/>
    <item android:id="@+id/settings_page"
        android:icon="@drawable/icon_settings"
        android:title="@string/drawer_settings_title"/>

    <group android:id="@+id/group1">
        <item android:id="@+id/help_feedback_page"
            android:icon="@drawable/icon_help"
            android:title="@string/drawer_help_title"/>
        <item android:id="@+id/about_page"
            android:icon="@drawable/icon_about"
            android:title="@string/drawer_about_title"/>
    </group>
</menu>